--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
+    "cheerio": "^1.0.0-rc.10",
     "cors": "^2.8.5",
+    "express": "^4.17.2",
     "fetch": "^1.1.0",
     "net": "^1.0.2",
     "node-fetch": "^3.1.0",
